# 8V42_Bogomolov_programming_3sem_lab3

./: .gitignore  CMakeLists.txt  baseContainer.h  doublyLinkedList.h  main.cpp  simpleVector.h  singlyLinkedList.h
.github/workflows/: release.yml
